[tool.poetry]
name = "moltransform"
version = "0.1.3"
description = ""
authors = ["Rodolfo Ferro <rodolfoferroperez@gmail.com>"]
license = "MIT"
readme = "README.md"
# homepage = "https://github.com/johnfraney/flake8-markdown"
repository = "https://github.com/RodolfoFerro/moltransform"
keywords = ["Rigid transformations", "Molecular coordinates", "xyz files"]
classifiers = [
    "Operating System :: OS Independent"
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
